src/objects/Sales_Order__c.object
<CustomObject>
    <description>Letter Of Engagement.</description>
    <fields>
        <fullName>Address_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address To</label>
        <referenceTo>Connection__c</referenceTo>
        <relationshipLabel>Sales Orders (Address To)</relationshipLabel>
        <relationshipName>Sales_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>FP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Approver</label>
        <referenceTo>Connection__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Reference_Number__c</fullName>
        <label>Client Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>LOE_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <formula>Deal__r.Deal_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Proposed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Effort__c</fullName>
        <label>Estimated Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue__c</fullName>
        <label>Estimated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Valid_Through__c</fullName>
        <label>Offer Valid Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProjectCategory__c</fullName>
        <label>Project Category</label>
        <picklist>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement      </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <label>Project Category</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <displayFormat>EXT/SO/{YYYY}/{00000}</displayFormat>
        <label>Sales Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Numbers__c</fullName>
        <formula>&quot;EXT/SO/&quot;+ TEXT(YEAR(DATEVALUE(CreatedDate))) + &quot;-&quot; + TRIM(RIGHT(Text(YEAR(DATEVALUE(CreatedDate))+1),2))+&quot;/&quot;+Auto_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Percent__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <label>Tax Percent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Reference_Number__c</columns>
        <columns>Customer__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Estimated_Effort__c</columns>
        <columns>Estimated_Revenue__c</columns>
        <columns>Project_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <recordTypes>
        <fullName>License</fullName>
        <active>true</active>
        <label>License</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Type</fullName>
        <active>true</active>
        <description>For FP projects</description>
        <label>Service Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services_T_M</fullName>
        <active>true</active>
        <label>Services T&amp;M</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_on_Billing_Type</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(Billing_Type__c)</errorConditionFormula>
        <errorMessage>Cannot change the billing type once sales order is created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Salesorder</fullName>
        <active>true</active>
        <description>Sales order name  should  have any special character</description>
        <errorConditionFormula>CONTAINS( Name , &quot;&apos;&quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Sales order name  should not contain  any special character</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_rule_on_dates</fullName>
        <active>true</active>
        <description>&apos;Start date&apos; should be less than the &apos;End date&apos;</description>
        <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>&apos;Start date&apos; should be less than the &apos;End date&apos;</errorMessage>
    </validationRules>
</CustomObject>